# hyperliquid-python-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  SECURITY.md  TERMS.md  deploy_agent_wallet.py  find_kinvaults.py  find_solara_vaults.py  order.py  publish.sh  pyproject.toml  requirements-ci.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml  claim-attribution.yml  lint.yml
api/: components.yaml
api/info/: allmids.yaml  assetctxs.yaml  candle.yaml  l2book.yaml  userstate.yaml
claims/: f303_attribution.json
examples/: basic_adding.py  basic_agent.py  basic_builder_fee.py  basic_convert_to_multi_sig_signer.py  basic_convert_to_multi_sig_user.py  basic_evm_use_big_blocks.py  basic_grid_trading_bot.py  basic_leverage_adjustment.py  basic_market_order.py  basic_modify.py  basic_multi_sig.py  basic_order.py  basic_order_modify.py  basic_order_with_builder_deployed_dex.py  basic_order_with_cloid.py  basic_recover_user.py  basic_schedule_cancel.py  basic_send_asset.py  basic_set_referrer.py  basic_spot_deploy.py  basic_spot_order.py  basic_spot_to_builder_deployed_perp_dex.py  basic_spot_to_perp.py  basic_spot_to_perp_with_builder_deployed_dex.py  basic_spot_transfer.py  basic_staking.py  basic_sub_account.py  basic_tpsl.py  basic_transfer.py  basic_twap_order.py  basic_vault.py  basic_vault_transfer.py  basic_withdraw.py  basic_ws.py  c_signer.py  c_validator.py  cancel_open_orders.py  config.json.example  dex_abstraction.py  evm_block_indexer.py  (+19 more)
githooks/: pre-push
hyperliquid/: api.py  exchange.py  exchange_plus.py  info.py  websocket_manager.py
hyperliquid/utils/: constants.py  error.py  signing.py  types.py
i18n/tr/: README_tr.md
tests/: basic_grid_trading_bot_test.py  exchange_test.py  info_test.py  signing_test.py  test_api.py  test_exchange.py  test_order.py
tests/cassettes/: test_get_all_mids.yaml  test_get_candles_snapshot.yaml  test_get_funding_history[1684811870000].yaml  test_get_funding_history[None].yaml  test_get_info.yaml  test_get_l2_snapshot.yaml  test_get_user_fills.yaml  test_get_user_state.yaml
tests/cassettes/info_test/: test_batch_clearinghouse_states.yaml  test_delegator_history.yaml  test_extra_agents.yaml  test_get_all_mids.yaml  test_get_candles_snapshot.yaml  test_get_frontend_open_orders.yaml  test_get_funding_history[1684811870000].yaml  test_get_funding_history[None].yaml  test_get_info.yaml  test_get_l2_snapshot.yaml  test_get_open_orders.yaml  test_get_user_fills.yaml  test_get_user_fills_by_time.yaml  test_get_user_state.yaml  test_historical_orders.yaml  test_portfolio.yaml  test_spot_asset_ctx.yaml  test_user_funding_history_with_end_time.yaml  test_user_funding_history_without_end_time.yaml  test_user_non_funding_ledger_updates_with_end_time.yaml  test_user_non_funding_ledger_updates_without_end_time.yaml  test_user_rate_limit.yaml  test_user_role.yaml  test_user_twap_slice_fills.yaml  test_user_vault_equities.yaml
