[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hyperliquid-python-sdk"
version = "0.21.0"
description = "Professional Python SDK for Hyperliquid API: High-performance trading on a decentralized CLOB."
readme = "README.md"
authors = ["Hyperliquid <hello@hyperliquid.xyz>"]
license = "MIT"
repository = "https://github.com/hyperliquid-dex/hyperliquid-python-sdk"
homepage = "https://github.com/hyperliquid-dex/hyperliquid-python-sdk"
packages = [{ include = "hyperliquid" }]

# --- Updated Keywords for SEO & Discoverability ---
keywords = ["hyperliquid", "dex", "trading", "perp-dex", "orderbook", "blockchain", "ethereum", "sdk"]

# --- Comprehensive Classifiers for PyPI ---
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"hyperliquid-cli" = "hyperliquid.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
# Core Web3 & Networking
eth-utils = ">=2.1.0,<6.0.0"
eth-account = ">=0.10.0,<0.14.0"
websocket-client = "^1.5.1"
requests = "^2.31.0"
# Performance: MessagePack for binary serialization (used by Hyperliquid API)
msgpack = "^1.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-recording = "^0.13.2"
mypy = "^1.14.1"
pre-commit = "^4.1.0"
safety = "^3.2.14" # Security: Checks dependencies for known vulnerabilities
coverage = "^7.6.10"
pytest-cov = "^6.0.0"
vcrpy = "^7.0.0"



# --- Formatting & Linting (Strict) ---
[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
# Static type checking is critical for financial applications to prevent runtime errors
python_version = "3.10"
strict = true # Enable all strict type-checking rules
warn_unreachable = true
pretty = true



[tool.pytest.ini_options]
# Ensuring trading logic is tested across all modules
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--cov=hyperliquid",
    "--cov-report=term-missing"
]
